-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
-
cf674f384 (dev), 80b39d24e (6.9)
Combined flag emojis, like for example the transgender flag, that is a combination of white flag and transgender symbol is not properly rendered. Both are rendered as a sequence of two emojis instead of one.
I can reproduce this with Qt 6.8 and all emoji related changes from Qt 6.9. I haven't tested with Qt 6.9 yet.
See the result below: